Archive2/f1/fece069d177f41/output
main.cpp: In function 'int main()':
main.cpp:13:21: warning: unknown escape sequence: '\040'
             printf ("Enter name:\ ");
                     ^
main.cpp:21:38: error: expected ';' before ')' token
                         highname=name);
                                      ^
main.cpp:25:43: error: cannot pass objects of non-trivially-copyable type 'std::string {aka class std::basic_string<char>}' through '...'
     printf("The Oldest Person is",highname);                     
                                           ^
main.cpp:25:43: warning: too many arguments for format [-Wformat-extra-args]
